Hopefully fixed the background issue on mobile

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -11,6 +11,7 @@ body {
   background-repeat: no-repeat;
   background-blend-mode: hard-light;
   min-height: 100%;
+  background-attachment: fixed;
 }
 
 // This is what makes the background responsive to screen size, please don't change it!
